--- a/you-matter-games-journal-main/render.yaml
+++ b/you-matter-games-journal-main/render.yaml
@@ -2,6 +2,7 @@ services:
   - type: web
     name: you-matter-now-backend
     env: python
+    rootDirectory: .
     buildCommand: pip install -r requirements.txt
     startCommand: cd backend && uvicorn main:app --host 0.0.0.0 --port $PORT
     envVars:
